node and express day 1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc-learn-node-with-express",
+  "name": "node and express",
   "version": "0.1.0",
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -10,6 +10,6 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch server.js"
   }
 }
